fix hero overflow

--- a/src/components/Hero/HomeNew/index.module.scss
+++ b/src/components/Hero/HomeNew/index.module.scss
@@ -43,6 +43,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  overflow-x: hidden;
 }
 
 .heroContentWrapper {
